# Hypersonics_project

./: CMakeLists.txt  README.md  roadmap.txt
BCFD/Lax Fredrichs/: Lax_Fredrichs.cpp
BCFD/test/: test.cpp
CFD_Sod/: CMakeList.txt  README.md  config.yaml
CFD_Sod/src/: main.cpp
cases/M7-blunt-cone/: config.json
cases/M7_blunted_cone/: config.json  run_case.py
meshing/: Blue_noise_sampling.py  Bowyer_Watson.py  mesh_boundary.py  mesh_quality.py  mesh_run.py  mesh_smoothing.py
schemes/: LaxFredrichs.py
src/aero/: normal_shock.py
src/models/: fay_riddell.py  sutton_graves.py
src/thermo/: air.py
src/util/: plots.py
test/: test.cpp  test.ilk
tests/: test_relations.py
